src/main/java/com/example/tinybank/errors/PaymentException.java
package com.example.tinybank.errors;

public class PaymentException extends Exception{
    public PaymentException(String message){
        super(message);
    }
}
